--- a/eth-erc20-swap/eth-contracts/package.json
+++ b/eth-erc20-swap/eth-contracts/package.json
@@ -1,21 +1,25 @@
 {
-  "name": "eth-erc20-swap",
-  "version": "1.0.0",
-  "description": "",
-  "main": "truffle-config.js",
-  "directories": {
-    "test": "test"
-  },
-  "dependencies": {
-    "dotenv": "^8.2.0",
-    "ethereumjs-wallet": "^0.6.3",
-    "truffle-wallet-provider": "^0.0.5",
-    "truffle-assertions": "^0.9.2"
-  },
-  "devDependencies": {},
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "author": "",
-  "license": ""
+	"name": "eth-erc20-swap",
+	"version": "1.0.0",
+	"description": "",
+	"main": "truffle-config.js",
+	"directories": {
+		"test": "test"
+	},
+	"dependencies": {
+		"dotenv": "^8.2.0",
+		"ethereumjs-wallet": "^0.6.3",
+		"truffle-wallet-provider": "^0.0.5",
+		"truffle-assertions": "^0.9.2"
+	},
+	"devDependencies": {
+		"prettier": "^1.19.1",
+		"prettier-plugin-solidity": "^1.0.0-alpha.34"
+	},
+	"scripts": {
+		"test": "echo \"Error: no test specified\" && exit 1",
+		"prettier": "prettier --write **/ERC20HTLC.sol"
+	},
+	"author": "",
+	"license": ""
 }
