--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,8 @@ members = [
 	"bin/node/rpc",
 	"bin/node/modules/did",
 	"bin/node/modules/ads",
+	"bin/node/modules/prices",
+	"bin/node/modules/utilities",
 	"bin/node/runtime",
 	"bin/node/testing",
 	"bin/node/transaction-factory",
