--- a/bin/node/runtime/Cargo.toml
+++ b/bin/node/runtime/Cargo.toml
@@ -12,7 +12,7 @@ integer-sqrt = { version = "0.1.2" }
 safe-mix = { version = "1.0", default-features = false }
 rustc-hex = { version = "2.0", optional = true }
 serde = { version = "1.0.103", features = ["derive"], optional = true }
-simple-json = { version = '0.1.1', git = "https://github.com/jingleizhang/simple-json.git", default-features = false }
+simple-json = { version = '0.1.2', git = "https://github.com/jingleizhang/simple-json.git", default-features = false }
 hex = { version = "0.4.0", default-features = false }
 num-bigint-dig = { version = "0.6.0", default-features = false}
 num-traits = { version = "0.2.4", default-features = false}
@@ -70,6 +70,8 @@ pallet-transaction-payment-rpc-runtime-api = { version = "2.0.0", default-featur
 # inner dependencies
 did = { path = "../modules/did", default-features = false }
 ads = { path = "../modules/ads", default-features = false }
+prices = { path = "../modules/prices", default-features = false }
+utilities = { path = "../modules/utilities", default-features = false }
 
 [build-dependencies]
 wasm-builder-runner = { version = "1.0.4", package = "substrate-wasm-builder-runner", path = "../../../utils/wasm-builder-runner" }
@@ -131,4 +133,6 @@ std = [
 	"sp-version/std",
 	"did/std",
 	"ads/std",
+	"prices/std",
+	"utilities/std"
 ]
