--- a/ethereum/substrate-deputy/package.json
+++ b/ethereum/substrate-deputy/package.json
@@ -1,25 +1,28 @@
 {
-  "name": "substrate-deputy",
-  "version": "0.0.1",
-  "description": "prochain substrate deputy",
-  "main": "index.js",
-  "dependencies": {
-    "@polkadot/api": "^0.99.0-beta.5",
-    "@polkadot/util": "^1.8.0-beta.1",
-    "bs58": "^4.0.1",
-    "express": "^4.15.2",
-    "get-json": "^1.0.1",
-    "hex": "^0.1.0",
-    "json": "^9.0.6",
-    "log4js": "^5.3.0",
-    "nedb": "^1.8.0",
-    "nedb-promise": "^2.0.1",
-    "node-schedule": "^1.3.2",
-    "request": "^2.88.0",
-    "request-promise": "^4.2.4",
-    "web3": "^1.2.4"
-  },
-  "scripts": {
-    "start": "node index.js"
-  }
+	"name": "substrate-deputy",
+	"version": "0.0.1",
+	"description": "prochain substrate deputy",
+	"main": "index.js",
+	"dependencies": {
+		"@polkadot/api": "^0.100.0-beta.14",
+		"@polkadot/util": "^1.7.1",
+		"@polkadot/keyring": "^1.7.1",
+		"@polkadot/util-crypto": "^1.7.1",
+		"bs58": "^4.0.1",
+		"express": "^4.15.2",
+		"get-json": "^1.0.1",
+		"hex": "^0.1.0",
+		"json": "^9.0.6",
+		"log4js": "^5.3.0",
+		"nedb": "^1.8.0",
+		"nedb-promise": "^2.0.1",
+		"node-schedule": "^1.3.2",
+		"request": "^2.88.0",
+		"request-promise": "^4.2.4",
+		"web3": "^1.2.4"
+	},
+	"scripts": {
+		"start": "node index.js"
+	},
+	"license": "ISC"
 }
