--- a/ethereum/erc20-htlc-swap/package.json
+++ b/ethereum/erc20-htlc-swap/package.json
@@ -1,33 +1,36 @@
 {
-    "name": "htlc",
-    "version": "1.0.0",
-    "description": "",
-    "main": "truffle.js",
-    "directories": {
-        "test": "test"
-    },
-    "scripts": {
-        "dev": "lite-server",
-        "test": "echo \"Error: no test specified\" && exit 1"
-    },
-    "author": "",
-    "license": "MIT",
-    "devDependencies": {
-        "lite-server": "^2.3.0"
-    },
-    "dependencies": {
-        "dotenv": "^8.2.0",
-        "ethereumjs-wallet": "^0.6.3",
-        "truffle-wallet-provider": "^0.0.5",
-        "truffle-assertions": "^0.9.2",
-        "get-json": "^1.0.1",
-        "hex": "^0.1.0",
-        "json": "^9.0.6",
-        "sha": "^3.0.0",
-        "sha3": "^2.0.7",
-        "web3": "^1.2.4",
-        "@polkadot/api": "^0.99.0-beta.5",
-        "@polkadot/util": "^1.8.0-beta.1",
-        "bs58": "^4.0.1"
-    }
+	"name": "htlc",
+	"version": "1.0.0",
+	"description": "",
+	"main": "truffle.js",
+	"directories": {
+		"test": "test"
+	},
+	"scripts": {
+		"dev": "lite-server",
+		"test": "echo \"Error: no test specified\" && exit 1"
+	},
+	"author": "",
+	"license": "MIT",
+	"devDependencies": {
+		"lite-server": "^2.3.0"
+	},
+	"dependencies": {
+		"@polkadot/api": "^0.99.0-beta.5",
+		"@polkadot/util": "^1.8.0-beta.1",
+		"bs58": "^4.0.1",
+		"dotenv": "^8.2.0",
+		"ethereumjs-wallet": "^0.6.3",
+		"get-json": "^1.0.1",
+		"hex": "^0.1.0",
+		"json": "^9.0.6",
+		"sha": "^3.0.0",
+		"sha3": "^2.0.7",
+		"solc": "^0.4.8",
+		"truffle-assertions": "^0.9.2",
+		"truffle-wallet-provider": "^0.0.5",
+		"@truffle/artifactor": "^4.0.43",
+		"@truffle/contract": "^4.1.4",
+		"web3": "^1.2.4"
+	}
 }
