--- a/ethereum/substrate-deputy/package.json
+++ b/ethereum/substrate-deputy/package.json
@@ -14,6 +14,7 @@
 		"hex": "^0.1.0",
 		"json": "^9.0.6",
 		"log4js": "^5.3.0",
+		"sleep": "^6.1.0",
 		"nedb": "^1.8.0",
 		"nedb-promise": "^2.0.1",
 		"node-schedule": "^1.3.2",
