--- a/bin/node/cli/Cargo.toml
+++ b/bin/node/cli/Cargo.toml
@@ -31,7 +31,7 @@ hex-literal = "0.2.1"
 jsonrpc-core = "14.0.3"
 log = "0.4.8"
 rand = "0.7.2"
-structopt = "0.3.7"
+structopt = "=0.3.7"
 serde_json = "1.0.41"
 hex = "0.4.0"
 
@@ -103,7 +103,7 @@ tempfile = "3.1.0"
 [build-dependencies]
 sc-cli = { version = "0.8.0", package = "sc-cli", git = "https://github.com/ProChain/substrate.git" }
 build-script-utils = { version = "2.0.0", package = "substrate-build-script-utils", path = "../../../utils/build-script-utils" }
-structopt = "0.3.7"
+structopt = "=0.3.7"
 vergen = "3.0.4"
 
 [features]
