--- a/bin/utils/chain-spec-builder/Cargo.toml
+++ b/bin/utils/chain-spec-builder/Cargo.toml
@@ -11,4 +11,4 @@ sc-keystore = { version = "2.0.0", git = "https://github.com/ProChain/substrate.
 node-cli = { path = "../../node/cli" }
 sp-core = { version = "2.0.0", git = "https://github.com/ProChain/substrate.git" }
 rand = "0.7.2"
-structopt = "0.3.3"
+structopt = "=0.3.7"
