--- a/utils/frame/rpc/system/Cargo.toml
+++ b/utils/frame/rpc/system/Cargo.toml
@@ -5,7 +5,7 @@ authors = ["Parity Technologies <admin@parity.io>"]
 edition = "2018"
 
 [dependencies]
-sc-client = { version = "2.0.0", git = "https://github.com/ProChain/substrate.git" }
+sc-client = { version = "0.8", git = "https://github.com/ProChain/substrate.git" }
 codec = { package = "parity-scale-codec", version = "1.0.0" }
 futures = "0.3.1"
 jsonrpc-core = "14.0.3"
@@ -14,6 +14,7 @@ jsonrpc-derive = "14.0.3"
 log = "0.4.8"
 serde = { version = "1.0.101", features = ["derive"] }
 sp-runtime = { version = "2.0.0", git = "https://github.com/ProChain/substrate.git" }
+sp-api = { version = "2.0.0", git = "https://github.com/ProChain/substrate.git" }
 frame-system-rpc-runtime-api = { version = "2.0.0", git = "https://github.com/ProChain/substrate.git" }
 sp-core = { version = "2.0.0", git = "https://github.com/ProChain/substrate.git" }
 sp-blockchain = { version = "2.0.0", git = "https://github.com/ProChain/substrate.git" }
