--- a/ethereum/substrate-deputy/package.json
+++ b/ethereum/substrate-deputy/package.json
@@ -4,10 +4,10 @@
 	"description": "prochain substrate deputy",
 	"main": "index.js",
 	"dependencies": {
-		"@polkadot/api": "^0.100.0-beta.14",
-		"@polkadot/util": "^1.7.1",
-		"@polkadot/keyring": "^1.7.1",
-		"@polkadot/util-crypto": "^1.7.1",
+		"@polkadot/api": "^1.0.0-beta.8",
+		"@polkadot/keyring": "^2.0.0-beta.4",
+		"@polkadot/util": "^2.0.0-beta.4",
+		"@polkadot/util-crypto": "^2.0.0-beta.4",
 		"bs58": "^4.0.1",
 		"express": "^4.15.2",
 		"get-json": "^1.0.1",
