--- a/ethereum/erc20-htlc-swap/package.json
+++ b/ethereum/erc20-htlc-swap/package.json
@@ -1,36 +1,43 @@
 {
-	"name": "htlc",
-	"version": "1.0.0",
-	"description": "",
-	"main": "truffle.js",
-	"directories": {
-		"test": "test"
-	},
-	"scripts": {
-		"dev": "lite-server",
-		"test": "echo \"Error: no test specified\" && exit 1"
-	},
-	"author": "",
-	"license": "MIT",
-	"devDependencies": {
-		"lite-server": "^2.3.0"
-	},
-	"dependencies": {
-		"@polkadot/api": "^0.99.0-beta.5",
-		"@polkadot/util": "^1.8.0-beta.1",
-		"bs58": "^4.0.1",
-		"dotenv": "^8.2.0",
-		"ethereumjs-wallet": "^0.6.3",
-		"get-json": "^1.0.1",
-		"hex": "^0.1.0",
-		"json": "^9.0.6",
-		"sha": "^3.0.0",
-		"sha3": "^2.0.7",
-		"solc": "^0.4.8",
-		"truffle-assertions": "^0.9.2",
-		"truffle-wallet-provider": "^0.0.5",
-		"@truffle/artifactor": "^4.0.43",
-		"@truffle/contract": "^4.1.4",
-		"web3": "^1.2.4"
-	}
+  "name": "default",
+  "version": "0.1.0",
+  "private": true,
+  "scripts": {
+    "serve": "vue-cli-service serve",
+    "build": "vue-cli-service build",
+    "lint": "vue-cli-service lint"
+  },
+  "dependencies": {
+    "@polkadot/util": "^1.7.1",
+    "@polkadot/util-crypto": "^1.7.1",
+    "@vant/touch-emulator": "^1.2.0",
+    "axios": "^0.19.0",
+    "bs58": "^4.0.1",
+    "clipboard": "^2.0.4",
+    "core-js": "^3.6.1",
+    "css-loader": "^3.4.0",
+    "fastclick": "^1.0.6",
+    "moment": "^2.24.0",
+    "px2rem-loader": "^0.1.9",
+    "vee-validate": "^3.2.1",
+    "vue-i18n": "^8.15.3",
+    "vue-socket.io": "^3.0.7",
+    "vuex-persistedstate": "^2.5.4",
+    "weixin-js-sdk": "^1.4.0-test"
+  },
+  "devDependencies": {
+    "@vue/cli-plugin-babel": "^4.1.1",
+    "@vue/cli-plugin-eslint": "^4.1.1",
+    "@vue/cli-service": "^4.1.1",
+    "@vue/eslint-config-standard": "^5.0.1",
+    "amfe-flexible": "^2.2.1",
+    "babel-eslint": "^10.0.3",
+    "babel-plugin-import": "^1.13.0",
+    "eslint": "^6.8.0",
+    "eslint-plugin-vue": "^6.1.0",
+    "node-sass": "^4.10.0",
+    "postcss-px2rem": "^0.3.0",
+    "sass-loader": "^8.0.0",
+    "vue-template-compiler": "^2.6.11"
+  }
 }
